--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?&serverTimezone=UTC&autoReconnect=true
-spring.datasource.username=root
-spring.datasource.password=Yu-jung31476
+spring.datasource.url=jdbc:mysql://meets.cslhtcsfsgs4.ap-northeast-2.rds.amazonaws.com:3306/meets?&serverTimezone=UTC&autoReconnect=true
+spring.datasource.username=admin
+spring.datasource.password=meets12!
 
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
