--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.security.oauth2.client.registration.google.client-id=207911921876-ee9ke7dmpgvnlnrha5kt1vvg9ki8o17a.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.profiles.include=oauth
