--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,5 +85,5 @@ jobs:
           --application-name $CODE_DEPLOY_APP_NAME \
           --deployment-group-name $DEPLOYMENT_GROUP_NAME \
           --file-exists-behavior OVERWRITE \
-          --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=springboot-intro-build.zip \
+          --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME.zip \
           --region ap-northeast-2
