ci/cd: 배포 관련 파일 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,20 +31,20 @@ jobs:
         with:
           java-version: 11
 
+      # application-prod.properties 파일 만들기
       - name: make application-prod.properties
-        if: true # branch가 develop일 때
         run: |
-          # spring의 resources 경로로 이동
           cd ./src/main/resources
           touch ./application-prod.properties
           # GitHub-Actions에서 설정한 값을 application-dev.properties 파일에 쓰기
           echo "${{ secrets.PROPERTIES }}" > ./application-prod.properties
         shell: bash
 
+      # gradlew 파일 실행권한 설정
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      # Build
+      # 빌드
       - name: Build with Gradle
         run: ./gradlew clean build
 
@@ -52,19 +52,23 @@ jobs:
       - name: Make Directory for deliver
         run: mkdir deploy
 
-      # Jar 파일 Copy
+      # 스크립트 파일 복사
+      - name: Copy shell
+        run: cp ./scripts/* ./deploy/
+
+      # Jar 파일 복사
       - name: Copy Jar
         run: cp ./build/libs/*.jar ./deploy/
 
-      # appspec.yml Copy
+      # appspec.yml 복사
       - name: Copy appspec
         run: cp appspec.yml ./deploy/
 
-      # 압축파일 형태로 전달
+      # deploy 폴더 내의 모든 파일을 압축하여 zip 파일 만들기
       - name: Make zip file
-        run: zip -r -qq -j ./$PROJECT_NAME.zip ./deploy
+        run: zip -r -qq -j ./$PROJECT_NAME.zip ./deploy/
 
-      # S3 Bucket으로 copy
+      # S3 Bucket으로 복사
       - name: Deliver to AWS S3
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -75,7 +79,7 @@ jobs:
           --acl private \
           ./$PROJECT_NAME.zip s3://$BUCKET_NAME/$PROJECT_NAME.zip
 
-      # Deploy
+      # 배포
       - name: Deploy
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
