chore: Spring Profile 설정 추가

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,7 +10,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.security.oauth2.client.registration.google.client-id=207911921876-ee9ke7dmpgvnlnrha5kt1vvg9ki8o17a.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=profile,email
-spring.profiles.include=oauth
+web.origin=http://ec2-43-200-32-178.ap-northeast-2.compute.amazonaws.com:8081
