--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,14 +31,13 @@ jobs:
         with:
           java-version: 11
 
-#      # application-prod.properties 파일 만들기
-#      - name: make application-prod.properties
-#        run: |
-#          cd ./src/main/resources
-#          touch ./application-prod.properties
-#          # GitHub-Actions에서 설정한 값을 application-dev.properties 파일에 쓰기
-#          echo "${{ secrets.PROPERTIES }}" > ./application-prod.properties
-#        shell: bash
+      # application-prod.properties 파일 만들기
+      - name: make application-prod.properties
+        run: |
+          cd ./src/main/resources
+          touch ./application-prod.properties
+          echo "${{ secrets.PROPERTIES }}" > ./application-prod.properties
+        shell: bash
 
       # gradlew 파일 실행권한 설정
       - name: Grant execute permission for gradlew
