--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+application.properties
+application-prod.properties
 
 ### NetBeans ###
 /nbproject/private/
