--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,12 +31,20 @@ jobs:
         with:
           java-version: 11
 
+      # application.properties 파일 만들기
+      - name: make application.properties
+        run: |
+          cd ./src/main/resources
+          touch ./application.properties
+          echo "${{ secrets.PROPERTIES }}" > ./application.properties
+        shell: bash
+
       # application-prod.properties 파일 만들기
       - name: make application-prod.properties
         run: |
           cd ./src/main/resources
           touch ./application-prod.properties
-          echo "${{ secrets.PROPERTIES }}" > ./application-prod.properties
+          echo "${{ secrets.PROD_PROPERTIES }}" > ./application-prod.properties
         shell: bash
 
       # gradlew 파일 실행권한 설정
@@ -50,14 +58,6 @@ jobs:
       # 전송할 파일을 담을 디렉토리 생성
       - name: Make Directory for deliver
         run: mkdir deploy
-
-#      # application-prod.properties 파일 만들기2
-#      - name: make application-prod.properties
-#        run: |
-#          cd ./deploy
-#          touch application-prod.properties
-#          echo "${{ secrets.PROPERTIES }}" > ./application-prod.properties
-#        shell: bash
 
       # 스크립트 파일 복사
       - name: Copy shell
